k8s/slides-correction/postgres.yml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
# deployments.extensions "mypostgres" was not valid:
# * : Invalid value: "The edited file failed validation": ValidationError(Deployment.spec): unknown field "volumes" in io.k8s.api.extensions.v1beta1.DeploymentSpec
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: "2020-05-06T12:13:12Z"
  generation: 2
  labels:
    app: mypostgres
  name: mypostgres
  namespace: nicolas
  resourceVersion: "25830"
  selfLink: /apis/extensions/v1beta1/namespaces/nicolas/deployments/mypostgres
  uid: f4ca0c08-8f92-11ea-b2b0-42010a84021f
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mypostgres
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mypostgres
    spec:
      volumes:
        - name: postgresdata-storage
          persistentVolumeClaim:
            claimName: nicopvc
      containers:
      - env:
        - name: POSTGRESQL_USER
          value: toto
        - name: POSTGRESQL_PASSWORD
          value: titi
        - name: POSTGRESQL_DATABASE
          value: tata
        volumeMounts:
          - mountPath: "/bitnami"
            name: postgresdata-storage
        image: bitnami/postgresql
        imagePullPolicy: Always
        name: postgresql
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2020-05-06T12:33:00Z"
    lastUpdateTime: "2020-05-06T12:33:00Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2020-05-06T12:13:12Z"
    lastUpdateTime: "2020-05-06T12:33:00Z"
    message: ReplicaSet "mypostgres-6f98768d98" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
